--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
              </article>
              <article class="header_article_txt">
                  <h3>SNEAKER COMPANY</h3>
-                 <H2 class="title">Fall Limite Sneakers</H2>
+                 <H2 >Fall Limite Sneakers</H2>
                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut, doloribus rerum dolorum quis repellendus cumque magnam fugiat quae similique. Voluptatum exercitationem dicta et enim ipsam corporis ullam, eaque deserunt error.</p>
                  <br>
                  <div class="dos">
