--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--fontAweson-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!--fontGoogle-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,10 +24,11 @@
                 <img src="images/icon-menu.svg" id="menu_hamburguesa">
                 <img src="images/logo.svg" id="logo_hamburguesa">
             </div>
-
+            
             <ul class="ul_Sneaker">
                 <ul class="ul_Sneaker_re">
                 <img src="images/logo.svg" class="logo">
+                <i class="fa-solid fa-circle-half-stroke"></i>
                 <li>Collections</li>
                 <li>Men</li>
                 <li>Women</li>
