--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </ul>
             <article class="article_Sneaker" id="article_Sneaker">
                 <img src="images/icon-cart.svg" class="carshop" id="carshop">
-                <img src="images/image-avatar.png" class="avatar" id="avatar">
+                <!--<img src="images/image-avatar.png" class="avatar" id="avatar">-->
             </article>
         </nav>
        <!-- <hr class="color">-->
