--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                 </div>
                   <article class="cash_Sneaker">
                  <div class="cantidad">
-                    <span class="menos">-</span>
+                    <span class="menos"><img src="images/icon-minus.svg" alt=""></span>
                     <span class="cantidad_pro"></span>
-                    <span class="mas">+</span>
+                    <span class="mas"><img src="images/icon-plus.svg" alt=""></span>
                  </div>
                  <button class="add" id="add_product"><img src="images/icon-cart.svg" alt="">Add to cart</button>
                 </article>
